--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
+html,
+body {
+  min-width: 1280px;
+}
+
 body {
   margin: 0;
   padding: 0;
-
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 26px;
   color: black;
   text-transform: uppercase;
-
   background-color: #f2f2f2;
 }
 
@@ -15,18 +18,45 @@ a {
   text-decoration: none;
 }
 
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+
+.main-header {
+  margin: 0;
+  padding: 0;
+}
+
 .main-navigation {
   font-size: 14px;
   line-height: 26px;
   font-weight: 700;
   color: black;
-
   background-color: #ffffff;
-}
 
-.site-navigation-one,
-.site-navigation-two {
-  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
 .main-navigation a {
@@ -41,19 +71,63 @@ a {
   color: #b2b2b2;
 }
 
+.site-navigation {
+  list-style: none;
+
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1200px;
+}
+
+.site-navigation a {
+  display: block;
+}
+
+.site-navigation li:nth-child(1) {
+  padding-left: 25px;
+  padding-right: 37px;
+}
+
+.site-navigation li:nth-child(2) {
+  padding-right: 280px;
+}
+
+.site-navigation li:nth-child(4) {
+  padding-left: 47px;
+  padding-right: 73px;
+}
+
+.main-header-logo {
+  position: absolute;
+}
+
 .banner,
 .subtitle {
   text-align: center;
 }
 
 .banner {
-  background-image: url("../img/background-photo.jpg");
-  background-position: top center;
+  background-color: #81b3d2;
+  background-image:
+    url("../img/intro-mask.svg"),
+    url("../img/background-photo.jpg");
+  background-position: 50% 100%, 0 0;
   background-repeat: no-repeat;
+
+  width: 1200px;
+  padding-top: 75px;
+  padding-bottom: 80px;
 }
 
 .subtitle {
   background-color: white;
+
+  width: 492px;
+  padding-top: 60px;
+  padding-bottom: 57px;
+  padding-left: 355px;
+  padding-right: 354px;
 }
 
 .subtitle h2 {
@@ -66,12 +140,50 @@ a {
   background-color: #81b3d2;
 }
 
+.feature {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.feature-image {
+  width: 800px;
+}
+
+.feature-image img {
+  display: block;
+}
+
 .offers {
   background-color: white;
 }
 
+.offers-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.offers-item {
+  width: 286px;
+  text-align: center;
+  padding-top: 60px;
+  padding-left: 67px;
+  padding-right: 57px;
+  padding-bottom: 85px;
+}
+
 .offers-list li {
   list-style: none;
+}
+
+.feature-text {
+  text-align: center;
+  width: 400px;
+  padding-top: 48px;
+  padding-left: 49px;
+  padding-right: 49px;
+
 }
 
 .offers-item p,
@@ -79,20 +191,55 @@ a {
 .reasons-list p {
   font-size: 14px;
   line-height: 21px;
+  padding-top: 27px;
+  margin: 0;
+}
+
+.feature-text h2,
+.reasons-list h2 {
+  padding-bottom: 27px;
+  margin: 0;
+}
+
+.offers-item h2 {
+  padding-top: 27px;
+  margin: 0;
 }
 
 .reasons li {
   list-style: none;
 }
 
+.reasons-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.reasons-item {
+  width: 265px;
+  text-align: center;
+  padding-top: 45px;
+  padding-left: 68px;
+  padding-right: 68px;
+  padding-bottom: 64px;
+}
+
 .search {
   background-color: white;
   text-align: center;
+
+  padding-top: 55px;
+
 }
 
 .search-item {
   font-size: 25px;
   font-weight: 700;
+}
+
+.item-data {
+  padding-bottom: 50px;
 }
 
 .search-button {
@@ -112,6 +259,12 @@ a {
 .search-button:active {
   color: #827872;
   background-color: #503e33;
+}
+
+.form {
+  position: absolute;
+  left: 41%;
+  background-color: white;
 }
 
 .form-booking,
@@ -173,9 +326,16 @@ a {
   background-color: #5496bd;
 }
 
+.map img {
+  display: block;
+}
+
 .main-footer {
   color: black;
   background-color: white;
+
+  display: flex;
+  justify-content: space-around;
 }
 
 .footer-visit {
@@ -202,15 +362,67 @@ a {
   background-color: #669ec0;
 }
 
-.footer-social a:active {
-  color: #88b6d1;
+.button-social {
+  width: 47px;
+  height: 48px;
+
+  background-color: #81b3d2;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-social:active path {
+  fill: #88b6d1;
   background-color: #5496bd;
+}
+
+.footer-social ul {
+  display: flex;
+  width: 151px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer-social ul,
+.footer-visit,
+.footer-copyright {
+  padding-top: 36px;
+  padding-bottom: 36px;
 }
 
 .footer-copyright {
   font-size: 14px;
   line-height: 26px;
   color: black;
+  display: flex;
+}
+
+.footer-copyright b {
+  padding-top: 10px;
+  padding-right: 8px;
+}
+
+.footer-logo {
+  width: 115px;
+  height: 40px;
+  background-image: url("../img/logo-htmlacademy.svg");
+  background-repeat: no-repeat;
+}
+
+.footer-logo:hover {
+  width: 115px;
+  height: 40px;
+  background-image: url("../img/logo_name1.svg");
+  background-repeat: no-repeat;
+}
+
+.footer-logo:active {
+  width: 115px;
+  height: 40px;
+  background-image: url("../img/logo_name2.svg");
+  background-repeat: no-repeat;
 }
 
 .form-search {
@@ -218,20 +430,158 @@ a {
   background-repeat: no-repeat;
 }
 
+.form-search fieldset {
+  border: none;
+}
+
+.filters {
+  width: 510px;
+  display: flex;
+  justify-content: space-around;
+  padding-right: 300px;
+}
+
+.form-search {
+  display: flex;
+  justify-content: space-around;
+  margin: 0;
+  padding-top: 31px;
+  padding-bottom: 31px;
+}
+
+.form-search ul {
+  margin: 0;
+  padding: 0;
+}
+
 .form-search legend {
+  padding-bottom: 28px;
+}
+
+.form-filter:nth-child(1),
+.form-filter:nth-child(2) {
+  padding-bottom: 23px;
+}
+
+.form-search legend,
+.filter-range-title {
   font-size: 16px;
   line-height: 21px;
   font-weight: 700;
   color: white;
 }
+.filter-range {
+  width: 330px;
+  padding-right: 73px;
+}
 
-.form-search li,
-.form-cost input[value],
+.filter-range-title {
+  margin-bottom: 9px;
+}
+
+.price-controls {
+  position: relative;
+  height: 36px;
+  margin-bottom: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  font-size: 0;
+}
+
+.price-controls label {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 38px;
+  vertical-align: top;
+  cursor: pointer;
+  color: white;
+}
+
+.price-controls .min-price,
+.price-controls .max-price {
+  width: 90px;
+  padding-left: 65px;
+}
+
+.form-search ul,
 .form-button {
   list-style: none;
   font-size: 14px;
   line-height: 21px;
   color: white;
+}
+
+.price-controls input {
+  width: 50px;
+  margin: 0;
+  color: inherit;
+  font: inherit;
+  background: none;
+  border: none;
+}
+.price-controls::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2px;
+  height: 22px;
+  background: #ffffff;
+  transform: translate(-50%, -50%);
+}
+
+.range-controls {
+  position: relative;
+  margin-bottom: 32px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+  width: 80%;
+  height: 2px;
+  background: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  top: -9px;
+  width: 4px;
+  height: 4px;
+  background: #ababab;
+  border: 8px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  cursor: pointer;
+}
+
+.range-toggle-min {
+  left: 0;
+}
+
+.range-toggle-max {
+  left: 80%;
+}
+
+.range-toggle:hover {
+  background: #1c4f80;
+}
+
+.form-button {
+  display: block;
+  margin: 0 auto;
+  padding: 6px 35px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #ffffff;
+  text-transform: uppercase;
+  background: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 .form-button:hover {
@@ -264,7 +614,19 @@ a {
   font-size: 12px;
   line-height: 18px;
   color: #cacaca;
-  border-bottom: 1px dashed #cacaca;
+  border-bottom: 1px dashed #81b3d2;
+}
+
+.arrow-up {
+  position: absolute;
+  top: 42%;
+  left: 82%;
+}
+
+.arrow-down {
+  position: absolute;
+  top: 42%;
+  left: 83.5%;
 }
 
 .price a {
@@ -276,8 +638,100 @@ a {
   color: #766357;
 }
 
+.sorting {
+  display: flex;
+  margin: 0;
+  padding-bottom: 33px;
+}
+
+.sorting-search {
+  width: 165px;
+  padding-left: 65px;
+  padding-top: 31px;
+  margin: 0;
+}
+
+.sorting-sections {
+  display: flex;
+}
+
+.sorting-title {
+  padding-top: 39px;
+}
+
+.sorting-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.sorting-item {
+  width: 88px;
+  padding-top: 35px;
+}
+
+.price {
+  padding-left: 37px;
+}
+
+.catalog-item::before,
+.main-footer::before {
+  content: "";
+  width: 1200px;
+  height: 1px;
+  background-color: #e5e5e5;
+  position: absolute;
+}
+
+.catalog-list {
+  margin: 0;
+  padding: 0;
+}
+
 .catalog-item {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+
   background-color: white;
+}
+
+.catalog-image-item {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.catalog-item-left {
+  display: flex;
+  justify-content: space-between;
+  width: 426px;
+  padding-left: 73px;
+}
+
+.catalog-item-info {
+  width: 260px;
+}
+
+.hotel-rating {
+  width: 114px;
+}
+
+.button-more,
+.button-booking {
+  padding: 8px 17px;
+}
+
+.catalog-hotel {
+  margin-right: 40px;
+}
+
+.catalog-motel {
+  margin-right: 64px;
+}
+
+.catalog-apartment {
+  margin-right: 21px;
 }
 
 .catalog-list li {
@@ -297,6 +751,10 @@ a {
 
 .catalog-item-title a:active {
   color: #b2b2b2;
+}
+
+.catalog-item-info h2 {
+  margin: 23px 0 2px 0;
 }
 
 .catalog-item-info span {
@@ -339,11 +797,58 @@ a {
   background-color: #503e33;
 }
 
-.hotel-rating-stars span {
-  background-color: #81b3d2;
+.hotel-rating {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-right: 73px;
+}
+
+.hotel-rating-stars  {
+  width: 90px;
+  height: 18px;
+
+  margin-left: 21px;
+}
+
+.hotel-rating-stars .star1::after {
+  content: "";
+  width: 18px;
+  height: 18px;
+  position: absolute;
   background-image: url("../img/star.svg");
-  background-position: center;
-  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+.hotel-rating-stars .star2::after {
+  content: "";
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  left: 80%;
+  background-image: url("../img/star.svg");
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+.hotel-rating-stars .star3::after {
+  content: "";
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  left: 81.5%;
+  background-image: url("../img/star.svg");
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+.hotel-rating-stars .star4::after {
+  content: "";
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  left: 83%;
+  background-image: url("../img/star.svg");
+  background-position: 0 0;
+  background-repeat: repeat;
 }
 
 .hotel-rating-text {
@@ -351,198 +856,9 @@ a {
   line-height: 21px;
   color: #b1b1b1;
   background-color: #f2f2f2;
-}
 
-/*----*/
-
-html,
-body {
-  min-width: 1280px;
-}
-
-.site-navigation-one,
-.site-navigation-two {
-  display: flex;
-  align-items: center;
-  height: 25px;
-}
-
-.site-navigation-one li {
-  width: 200px;
-}
-
-.site-navigation-two li {
-  width: 210px;
-}
-
-.main-header-logo {
-  width: 200px;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 0 40px;
-}
-
-.main-navigation .container {
-  display: flex;
-  justify-content: space-around;
-  height: 55px;
-}
-
-.banner {
-  width: 1200px;
-  padding-top: 75px;
-  padding-bottom: 80px;
-}
-
-
-.subtitle {
-  padding-top: 60px;
-  padding-bottom: 57px;
-}
-
-.search {
-  padding-top: 55px;
-}
-
-.item-data {
-  padding-bottom: 50px;
-}
-
-.main-footer {
-  display: flex;
-  justify-content: space-around;
-}
-
-.catalog-list {
-  margin: 0;
-  padding: 0;
-}
-
-.catalog-item {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0;
-}
-
-.catalog-item-left {
-  display: flex;
-  justify-content: space-between;
-  width: 426px;
-  padding-left: 73px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.hotel-rating {
-  width: 114px;
-}
-
-.catalog-item-info {
-  width: 260px;
-}
-
-.feature {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.feature-text {
+  width: 81px;
   text-align: center;
-  width: 400px;
-  padding-top: 50px;
-  padding-left: 58px;
-  padding-right: 58px;
-}
-
-.feature-image {
-  width: 800px;
-}
-
-.offers-list {
-  display: flex;
+  padding: 6px 16px;
   margin: 0;
-  padding: 0;
-}
-
-.offers-item {
-  width: 400px;
-  text-align: center;
-  padding-top: 60px;
-  padding-left: 71px;
-  padding-right: 71px;
-  padding-bottom: 85px;
-}
-
-.reasons-list {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.reasons-item {
-  width: 400px;
-  text-align: center;
-  padding-top: 45px;
-  padding-left: 94px;
-  padding-right: 95px;
-  padding-bottom: 64px;
-}
-
-.form-search {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.form-list-info {
-  width: 313px;
-}
-
-.form-list-type {
-  width: 280px;
-}
-
-.form-cost {
-  width: 400px;
-}
-
-.sorting {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.sorting-search {
-  width: 188px;
-  padding-left: 73px;
-  padding-top: 14px;
-}
-
-.sorting-sections {
-  display: flex;
-}
-
-.sorting-title {
-  padding-left: 50px;
-  padding-top: 39px;
-}
-
-.sorting-list {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.sorting-item {
-  width: 88px;
-  padding-top: 35px;
-}
-
-.price {
-  padding-left: 37px;
 }
