--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@ input[type="radio"].visually-hidden {
 .container {
   width: 1200px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 0px;
+
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
 
 .main-header {
@@ -80,17 +82,31 @@ input[type="radio"].visually-hidden {
   width: 1200px;
 }
 
-.site-navigation a {
-  display: block;
+.site-navigation li {
+  width: 100px;
+}
+
+.site-navigation li:nth-child(1),
+.site-navigation li:nth-child(2) {
+  text-align: left;
+}
+
+.site-navigation li:nth-child(3),
+.site-navigation li:nth-child(4) {
+  text-align: right;
 }
 
 .site-navigation li:nth-child(1) {
-  padding-left: 25px;
+  padding-left: 30px;
   padding-right: 37px;
 }
 
 .site-navigation li:nth-child(2) {
   padding-right: 280px;
+}
+
+.site-navigation li:nth-child(3) {
+  padding-right: 4px;
 }
 
 .site-navigation li:nth-child(4) {
@@ -107,37 +123,56 @@ input[type="radio"].visually-hidden {
   text-align: center;
 }
 
+.banner img {
+  padding-top: 4px;
+}
+
 .banner {
   background-color: #81b3d2;
-  background-image:
-    url("../img/intro-mask.svg"),
-    url("../img/background-photo.jpg");
-  background-position: 50% 100%, 0 0;
+  background-image: url("../img/background-photo.jpg");
+  background-position: 0% 21%;
   background-repeat: no-repeat;
 
   width: 1200px;
   padding-top: 75px;
-  padding-bottom: 80px;
+  padding-bottom: 76px;
+}
+
+.banner::after {
+  content: "";
+  top: 508px;
+  right: 352px;
+  width: 1200px;
+  height: 59px;
+  position: absolute;
+
+  padding-bottom: 0;
+  background-image: url("../img/intro-mask.svg");
 }
 
 .subtitle {
   background-color: white;
 
   width: 492px;
-  padding-top: 60px;
+  padding-top: 43px;
   padding-bottom: 57px;
   padding-left: 355px;
-  padding-right: 354px;
+  padding-right: 353px;
 }
 
 .subtitle h2 {
   font-size: 21px;
-  line-height: 26px;
+  line-height: 24px;
 }
 
 .feature-text {
   color: white;
   background-color: #81b3d2;
+}
+
+.feature-text-city {
+  width: 127px;
+  padding-left: 85px;
 }
 
 .feature {
@@ -239,17 +274,21 @@ input[type="radio"].visually-hidden {
 }
 
 .item-data {
+  padding-top: 35px;
   padding-bottom: 50px;
+  margin: 0;
 }
 
 .search-button {
+  display: inline-block;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
   color: white;
 
   background-color: #766357;
-  border: none;
+
+  padding: 30px 136px;
 }
 
 .search-button:hover {
@@ -263,8 +302,13 @@ input[type="radio"].visually-hidden {
 
 .form {
   position: absolute;
-  left: 41%;
+  left: 671px;
   background-color: white;
+  width: 561px;
+}
+
+.form-booking p {
+  margin: 0;
 }
 
 .form-booking,
@@ -277,34 +321,138 @@ input[type="radio"].visually-hidden {
 }
 
 .form-booking input {
+  border: none;
   background-color: #f2f2f2;
+}
+
+.form-data input {
+  width: 347px;
+  margin-left: 21px;
+  margin-bottom: 29px;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.form-calendar {
+  width: 21px;
+  height: 23px;
+  background-repeat: no-repeat;
+
+  fill: #a9a9a9;
+}
+
+.calendar-arrival {
+  position: absolute;
+  top: 63px;
+  right: 60px;
+}
+
+.calendar-departure {
+  position: absolute;
+  top: 135px;
+  right: 60px;
+}
+
+.arrival {
+  margin-top: 55px;
+}
+
+.form-quantity input {
+  width: 10px;
+  margin-bottom: 54px;
+  margin-left: 21px;
+  padding: 8px 50px;
+}
+
+.form-quantity button{
+  position: absolute;
+}
+
+.form-quantity  .adults {
+  margin-left: 16px;
+  margin-right: 48px;
+}
+
+.form-quantity label {
+  margin-right: 25px;
 }
 
 .form-booking input:hover {
   background-color: #ebebeb;
 }
 
-.form-booking input:active {
+.form-booking input:focus {
   border: #e5e5e5;
   background-color: #ffffff;
 }
 
-.form-calendar,
-.form-plus,
-.form-minus {
+.form-minus,
+.form-plus {
+  background-color: #a9a9a9;
+  border: none;
+
+  width: 12px;
+  height: 3px;
+}
+
+.minus-adults {
+  position: absolute;
+  top: 216px;
+  left: 175px;
+}
+
+.minus-children {
+  position: absolute;
+  top: 216px;
+  left: 425px;
+}
+
+.plus-adults {
+  position: absolute;
+  top: 216px;
+  left: 245px;
+}
+
+.plus-children {
+  position: absolute;
+  top: 216px;
+  left: 490px;
+}
+
+.plus-adults::after {
+  content: "";
+  position: absolute;
+  top: -4px;
+  right: 4.55px;
+  width: 3px;
+  height: 12px;
+
   background-color: #a9a9a9;
 }
 
-.form-calendar:hover,
-.form-plus:hover,
-.form-minus:hover {
-  background-color: black;
+.plus-children::after {
+  content: "";
+  position: absolute;
+  top: -4px;
+  right: 4.55px;
+  width: 3px;
+  height: 12px;
+
+  background-color: #a9a9a9;
 }
 
-.form-calendar:active,
-.form-plus:active,
-.form-minus:active {
-  background-color: #81b3d2;
+.form-calendar {
+  border: none;
+  background-color: #f2f2f2;
+}
+
+.form-calendar:hover {
+  fill: black;
+}
+
+.form-calendar:active {
+  fill: #81b3d2;
 }
 
 .button {
@@ -313,6 +461,8 @@ input[type="radio"].visually-hidden {
   font-weight: 700;
   color: white;
 
+  margin-bottom: 56px;
+  padding: 10px 193px;
   background-color: #81b3d2;
   border: none;
 }
@@ -326,16 +476,18 @@ input[type="radio"].visually-hidden {
   background-color: #5496bd;
 }
 
-.map img {
-  display: block;
-}
-
 .main-footer {
   color: black;
   background-color: white;
 
   display: flex;
   justify-content: space-around;
+}
+
+.main-footer-index {
+  margin-top: -148px;
+  position: relative;
+  background: rgba(255, 255, 255, 0.9);
 }
 
 .footer-visit {
@@ -412,17 +564,11 @@ input[type="radio"].visually-hidden {
 }
 
 .footer-logo:hover {
-  width: 115px;
-  height: 40px;
-  background-image: url("../img/logo_name1.svg");
-  background-repeat: no-repeat;
+  background-image: url("../img/logo-hover.svg");
 }
 
 .footer-logo:active {
-  width: 115px;
-  height: 40px;
-  background-image: url("../img/logo_name2.svg");
-  background-repeat: no-repeat;
+  background-image: url("../img/logo-active.svg");
 }
 
 .form-search {
@@ -617,16 +763,21 @@ input[type="radio"].visually-hidden {
   border-bottom: 1px dashed #81b3d2;
 }
 
-.arrow-up {
-  position: absolute;
-  top: 42%;
-  left: 82%;
+.sorting-arrow {
+  width: 35px;
+  position: relative;
+  top: 39px;
+  left: 480px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.arrow-down {
+.arrow-up::before {
   position: absolute;
-  top: 42%;
-  left: 83.5%;
+}
+
+.arrow-down::before {
+  position: absolute;
 }
 
 .price a {
@@ -717,11 +868,6 @@ input[type="radio"].visually-hidden {
   width: 114px;
 }
 
-.button-more,
-.button-booking {
-  padding: 8px 17px;
-}
-
 .catalog-hotel {
   margin-right: 40px;
 }
@@ -763,11 +909,15 @@ input[type="radio"].visually-hidden {
   color: black;
 }
 
-.button-more {
+.btn {
   font-size: 14px;
   line-height: 21px;
   font-weight: 700;
   color: white;
+  padding: 8px 17px;
+}
+
+.button-more {
   background-color: #81b3d2;
 }
 
@@ -781,10 +931,6 @@ input[type="radio"].visually-hidden {
 }
 
 .button-booking {
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 700;
-  color: white;
   background-color: #766357;
 }
 
@@ -808,47 +954,19 @@ input[type="radio"].visually-hidden {
   width: 90px;
   height: 18px;
 
-  margin-left: 21px;
+  margin-left: 25px;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
-.hotel-rating-stars .star1::after {
-  content: "";
+.hotel-rating-stars span {
   width: 18px;
   height: 18px;
-  position: absolute;
   background-image: url("../img/star.svg");
   background-position: 0 0;
-  background-repeat: repeat;
-}
-.hotel-rating-stars .star2::after {
-  content: "";
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  left: 80%;
-  background-image: url("../img/star.svg");
-  background-position: 0 0;
-  background-repeat: repeat;
-}
-.hotel-rating-stars .star3::after {
-  content: "";
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  left: 81.5%;
-  background-image: url("../img/star.svg");
-  background-position: 0 0;
-  background-repeat: repeat;
-}
-.hotel-rating-stars .star4::after {
-  content: "";
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  left: 83%;
-  background-image: url("../img/star.svg");
-  background-position: 0 0;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
+
+  padding-right: 5px;
 }
 
 .hotel-rating-text {
